<resources>
    <string name="app_name">순서 reorder</string>
    <string name="add_item">항목 추가</string>
    <string name="add">추가</string>
    <string name="item_hint">항목을 입력하세요</string>
    <string name="order_list">순서 목록</string>
    <string name="move_up">위로 이동</string>
    <string name="move_down">아래로 이동</string>
    <string name="delete">삭제</string>
    <string name="drag_hint">항목을 터치하여 위아래로 드래그하여 순서 변경</string>
</resources>
